--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nathanfaucett/async_json",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "async JSON parse/stringify",
   "repository": {
     "type": "git",
@@ -8,7 +8,7 @@
   },
   "main": "src/index.js",
   "scripts": {
-    "example": "comn -f example/src/index.js -o example/index.js",
+    "example": "comn -f ./example/src/index.js -o ./example/index.js",
     "test": "npm run test-node",
     "test-node": "node ./test | ./node_modules/.bin/tap-spec",
     "test-node-raw": "node ./test",
@@ -22,19 +22,21 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-contrib-jshint": "^1.0.0",
-    "grunt-jsbeautifier": "^0.2.13",
-    "tap-spec": "^4.0.0",
-    "tape": "^4.0.0",
-    "zuul": "^3.0.0"
+    "@nathanfaucett/comn": "0.0.11",
+    "@nathanfaucett/task": "^0.0.5",
+    "gulp-jsbeautifier": "^2.0.3",
+    "gulp-jshint": "^2.0.1",
+    "jshint": "^2.9.3",
+    "tap-spec": "^4.1.0",
+    "tape": "^4.2.0",
+    "zuul": "^3.11.0"
   },
   "dependencies": {
-    "@nathanfaucett/environment": "^0.0.1",
+    "@nathanfaucett/environment": "^0.0.2",
     "@nathanfaucett/extend": "^0.0.1",
     "@nathanfaucett/is_function": "^0.0.1",
     "@nathanfaucett/is_object": "^0.0.1",
-    "@nathanfaucett/messenger": "^0.0.1",
+    "@nathanfaucett/messenger": "^0.0.2",
     "@nathanfaucett/messenger_adapter": "^0.0.1",
     "@nathanfaucett/messenger_worker_adapter": "^0.0.1"
   }
